fixed overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,19 @@ body {
   overflow-x: hidden;
 }
 
+footer {
+  width: 100%;
+  height: 15rem;
+  padding: 0 2rem;
+  font-family: "engravers-gothic", sans-serif;
+  font-size: 1.5rem;
+  color: #fff;
+  background-color: #080808;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .hero {
   width: 100vw;
   height: 100vh;
@@ -67,6 +80,13 @@ body {
   .hero {
     background-position: top;
   }
+}
+
+hr {
+  width: 70%;
+  height: 0.2rem;
+  margin: 4rem auto 1rem;
+  background-color: #080808;
 }
 
 .header {
@@ -137,6 +157,7 @@ body {
   height: 150rem;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 }
 
 .section-news .featured-title {
@@ -511,6 +532,7 @@ body {
   position: sticky;
   position: -webkit-sticky;
   top: 10%;
+  overflow-x: hidden;
 }
 
 @media only screen and (min-width: 1024px) {
@@ -791,6 +813,7 @@ body {
   height: 55rem;
   margin: 10rem auto;
   position: relative;
+  overflow: hidden;
 }
 
 .section-video .swiper-container {
