--- a/sass/scss/themes/_cars.scss
+++ b/sass/scss/themes/_cars.scss
@@ -12,6 +12,7 @@
     position: relative;
     @include sticky-position;
     top: 10%;
+    overflow-x: hidden;
 
     @include tabletLandscape {
       & {
