--- a/sass/scss/themes/_news.scss
+++ b/sass/scss/themes/_news.scss
@@ -4,6 +4,7 @@
   height: 150rem;
   margin: 0 auto;
   position: relative;
+  overflow: hidden;
 
   .featured-title {
     width: 100%;
